# SimpleJSON

./: .gitignore  API.md  CMakeLists.txt  README.md  build.sh  example.cpp  json.cpp  json.hpp  parse.hpp
examples/: array_example.cpp  init_example.cpp  iter_example.cpp  json_example.cpp  load_example.cpp  prim_example.cpp
test/: run.py  tester.cpp
test/cases/: test10.json  test11.json  test13.json  test5.json  test7.json
